// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`4149.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
@media only screen and (max-width: 767px) {
  @include widths(2 3 4, \\@small);
}

$widths-breakpoint-separator: \\@small;

=====================================output=====================================
@media only screen and (max-width: 767px) {
  @include widths(2 3 4, \\@small);
}

$widths-breakpoint-separator: \\@small;

================================================================================
`;

exports[`4149.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
@media only screen and (max-width: 767px) {
  @include widths(2 3 4, \\@small);
}

$widths-breakpoint-separator: \\@small;

=====================================output=====================================
@media only screen and (max-width: 767px) {
  @include widths(2 3 4, \\@small);
}

$widths-breakpoint-separator: \\@small;

================================================================================
`;
